crates/test-files/fixtures/compile_errors/ctx_missing_create.fe
contract Foo {
    pub fn bar() {}
}

contract Bar {
    pub fn create_foo(ctx: Context) {
        ctx.create<Foo>(0)
    }
}
